# PorousScaffolds

./: CMakeLists.txt  README.md
PorousScaffolds/: CMakeLists.txt  qSlicerPorousScaffoldsModule.cxx  qSlicerPorousScaffoldsModule.h  qSlicerPorousScaffoldsModuleWidget.cxx  qSlicerPorousScaffoldsModuleWidget.h
PorousScaffolds/Logic/: vtkSlicerPorousScaffoldsLogic.cxx  vtkSlicerPorousScaffoldsLogic.h
PorousScaffolds/Resources/: qSlicerPorousScaffoldsModule.qrc
PorousScaffolds/Resources/UI/: qSlicerPorousScaffoldsFooBarWidget.ui  qSlicerPorousScaffoldsModuleWidget.ui
PorousScaffolds/Widgets/: qSlicerPorousScaffoldsFooBarWidget.cxx  qSlicerPorousScaffoldsFooBarWidget.h
PorousScaffolds/pores/: Cell02.stl
pores/: Cell01.stl
